fixed css so results appear better on small device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
 #flx {
     display: flex;
     min-height: 100vh;
+    max-width: 100vw;
     flex-direction: column;
     justify-content: space-between;
     overflow-x: auto;
@@ -66,15 +67,15 @@ main {
     width: 80%;
     margin-left: 10%;
     margin-right: 10%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .metric {
     width: 30%;
     display: flex;
     margin: 1em;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
 } 
 
 #adhd-result {
@@ -168,7 +169,7 @@ a:hover {
 
     .metric {
         width: 100%;
-        flex-direction: column;
+        /*flex-direction: column;*/
         flex-wrap: wrap;
         align-items: center;
     } 
